--- a/index.html
+++ b/index.html
@@ -64,6 +64,12 @@
                 </div>
             </div>
         </main>
+        <footer>
+            <a class="site_link" href="https://github.com/nma-m/interval-timer" target="_blank">nma</a>
+            <a class="github_link" href="https://github.com/nma-m/drumbeats" target="_blank">
+                <img width="20px" height="20px" src="github-mark-white.png" alt="Github logo">
+            </a>
+        </footer>
         <script src="scripts/metronome.js" type="module"></script>
         <script src="scripts/stopwatch.js"></script>
         <script src="scripts/tempo.js"></script>
