--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="description" content="The free online drumbeat metronome. Play to a beat instead of a click.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Drum Beats</title>
+        <title>Drum Beats Online</title>
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -18,7 +18,7 @@
     </head>
     <body>
         <header>
-            <h1>Drum Beats Web</h1>
+            <h1>Drum Beats Online</h1>
         </header>
         <main>
             <div class="stopwatch-container">
